--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,6 +7,10 @@ header{
     .logo{
       max-width: 226px;
       width: 100%;
+      a{
+        display: block;
+        cursor: pointer;
+      }
     }
     .call_center{
       display: flex;
