--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -1,8 +1,9 @@
 
 h1{
+  font-family: "Petra Sans",sans-serif;
   font-style: normal;
   font-weight: 800;
-  font-size: 52px;
+  font-size: 64px;
   line-height: 65px;
   color: #211D74;
 }
