--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -32,6 +32,9 @@ button{
     padding: 10px 28px;
     box-sizing: border-box;
   }
+  &_bold{
+    font-weight: bold;
+  }
 }
 input{
   color: #B4B4B4;
