--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -32,6 +32,7 @@ header{
       .search_btn{
         display: block;
         background: url("../../img/search_icon.png") center no-repeat;
+        background-size: contain;
         width: 20px;
         height: 21px;
       }
