--- a/src/sass/components/_list_elements.scss
+++ b/src/sass/components/_list_elements.scss
@@ -4,7 +4,7 @@
       display: flex;
       flex-direction: column;
       max-width: 1154px;
-      gap: 2rem;
+      gap: 8rem;
       margin: 0 auto;
     &_inner{
       max-width: 1280px;
@@ -69,7 +69,7 @@
       .txt{
         max-width: 525px;
         width: 100%;
-        padding: 1rem;
+        //padding: 1rem;
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
@@ -85,6 +85,13 @@
         p{
           line-height: 25px;
           color: #454545;
+        }
+        ul{
+
+          li{
+            font-weight: 500;
+            color: #000000;
+          }
         }
       }
       .imgs{
