--- a/src/sass/components/_map_section.scss
+++ b/src/sass/components/_map_section.scss
@@ -23,8 +23,10 @@
       }
       .sub_title{
         font-style: normal;
-        font-weight: 500;
+        font-weight: 600;
         font-size: 18px;
+        color: #454545;
+        font-family: "Petra Sans",sans-serif;
       }
     }
     .blue_bg{
