--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -73,6 +73,7 @@
       h5{
         color: #000000;
         text-transform: uppercase;
+        font-weight: bold;
       }
       button{
         color: #000000;
@@ -201,7 +202,7 @@
         color: #211D74;
         text-transform: uppercase;
         font-size: 18px;
-        font-weight: 500;
+        font-weight: bold;
         margin-bottom: 31px;
 
       }
