--- a/src/sass/components/_map_section.scss
+++ b/src/sass/components/_map_section.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin-bottom: 67px;
   .wrapper{
-      background: url("../../img/map.png") center no-repeat;
+      background: url("../img/map.png") center no-repeat;
       padding-top: 147px;
       padding-bottom: 85px;
       padding-left: 109px;
