--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -1,11 +1,11 @@
 
 h1{
-  font-family: "Petra Sans",sans-serif;
-  font-style: normal;
+  font-family: 'Petra Sans',sans-serif;
   font-weight: 800;
   font-size: 64px;
   line-height: 65px;
   color: #211D74;
+  font-style: normal;
 }
 h2{
   font-style: normal;
@@ -52,4 +52,7 @@ span{
   font-weight: 800;
   font-style: normal;
   line-height: 45px;
+}
+p{
+  font-weight: 500;
 }
