--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @import "components/footer";
 @import "components/jobs";
 @import "components/vacancies";
+@import "components/fonts";
 .position_relative{
   position: relative;
 }
