--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -142,14 +142,17 @@
     gap: 55px;
 
     .item{
-      background: #c2c2c2;
+      background: rgba(196, 196, 196, 0.01);
       max-width: 401px;
       width: 100%;
       height: 237px;
       position: relative;
+      box-shadow: 0px 19.9964px 39.9927px rgba(43, 54, 95, 0.2);
+      cursor: pointer;
       img{
         width: 100%;
         object-fit: cover;
+        height: 100%;
       }
       h3{
         position: absolute;
@@ -202,7 +205,7 @@
         color: #211D74;
         text-transform: uppercase;
         font-size: 18px;
-        font-weight: bold;
+        font-weight: 800;
         margin-bottom: 31px;
 
       }
