--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -10,6 +10,12 @@ header{
       a{
         display: block;
         cursor: pointer;
+        object{
+          width: 100%;
+        }
+        img{
+          width: 100%;
+        }
       }
     }
     .call_center{
