--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import "components/jobs";
 @import "components/vacancies";
 @import "components/fonts";
+@import "components/burger_menu";
 .position_relative{
   position: relative;
 }
