--- a/src/sass/components/_mixin.scss
+++ b/src/sass/components/_mixin.scss
@@ -11,3 +11,20 @@
   font-size: 32px;
   line-height: 36px;
 }
+
+@mixin title_h1_mobile{
+  font-size: 42px;
+  line-height: 42px;
+}
+@mixin title_h2_mobile{
+  font-size: 24px;
+  line-height: 24px;
+}
+
+@mixin title_h1_small_mobile{
+  font-size: 32px;
+  line-height: 32px;
+}
+@mixin subtitles_small_mobile{
+  font-size: 16px;
+}
