--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -196,7 +196,7 @@
 
           img{
             &:first-child{
-              height: auto;
+              height: 450px;
             }
             &:nth-child(2){
               display: none;
