--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -196,7 +196,8 @@
 
           img{
             &:first-child{
-              height: 450px;
+              height: 450px !important;
+              object-fit: contain;
             }
             &:nth-child(2){
               display: none;
