--- a/src/sass/components/_list_elements.scss
+++ b/src/sass/components/_list_elements.scss
@@ -36,12 +36,14 @@
     }
     .item{
       align-self: end;
+      gap: 111px;
       &:nth-child(2n){
         align-self: start;
         .txt{
           order: 1;
         }
         .imgs{
+
           order: 0;
           img{
             &:first-child{
@@ -95,6 +97,8 @@
       }
       .imgs{
         position: relative;
+        background: rgba(196, 196, 196, 0.01);
+        box-shadow: 0px -12px 39.9927px rgba(43, 54, 95, 0.2);
         img{
           &:first-child{
             max-width: 450px;
