--- a/src/sass/components/_list_elements.scss
+++ b/src/sass/components/_list_elements.scss
@@ -24,6 +24,7 @@
               &:before{
                 content: '';
                 width: 14px;
+                min-width: 14px;
                 height: 14px;
                 background: #FDB757;
                 border-radius: 50%;
