--- a/src/sass/components/_map_section.scss
+++ b/src/sass/components/_map_section.scss
@@ -1,12 +1,13 @@
 .section_map{
   position: relative;
-  margin-bottom: 67px;
+  margin-bottom: 100px;
   .wrapper{
-      background: url("../img/map.png") center no-repeat;
+      background: url("../img/map.png") right no-repeat , #E5E5E5;
       padding-top: 147px;
       padding-bottom: 85px;
       padding-left: 109px;
       box-sizing: border-box;
+    background-size: contain;
     .txt{
       background: #FFFFFF;
       padding: 35px 52px 28px 44px;
