--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -4,6 +4,11 @@
 }
 
 @media(max-width: 1280px){
+  .section_banner{
+    .container{
+      padding: 0;
+    }
+  }
   .section_map{
     .container{
       padding: 0;
@@ -325,8 +330,12 @@
   }
   .adv{
     .container_inner{
-      padding-left: 1rem;
-      padding-right: 1rem;
+      //padding-left: 1rem;
+      //padding-right: 1rem;
     }
+  }
+  .container_inner{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
