--- a/src/sass/components/_burger_menu.scss
+++ b/src/sass/components/_burger_menu.scss
@@ -1,7 +1,7 @@
 header{
   .burger_menu_btn{
     display: none;
-    position: fixed;
+    position: absolute;
     left: 90%;
     cursor: pointer;
     z-index: 2;
