Auto stash before merge of "main" and "origin/main"

--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -21,6 +21,10 @@
     div{
       display: flex;
       gap: 40px;
+      form{
+        display: flex;
+        gap: 40px;
+      }
     }
     a,
     select{
