--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -52,6 +52,10 @@ a{
   &_flex{
     display: flex;
   }
+  &_inner{
+    padding-top: 85px !important;
+    padding-bottom: 85px !important;
+  }
 }
 
 
